--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body, html {
 
 .hero {
   height: 100vh;
-  background-image: url(Imagen1.jpg); /* reemplaza por tu imagen */
+  background-image: url(Imagen1.jpg); 
   background-size: cover;
   background-position: center;
   position: relative;
@@ -36,7 +36,7 @@ body, html {
   background-color: rgba(255, 255, 255, 0.2);
 }
 .icon {
-  font-size: 34px; /* íconos más grandes */
+  font-size: 34px; 
   cursor: pointer;
 }
 .hero-content {
