--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,53 @@
-body, html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
+header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 120px;
+  background-color: rgba(0, 0, 0, 0.6);
+  color: white;
+  box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+  display: flex;
+  align-items: center;
 }
 
-.hero {
-  height: 100vh;
-  background-image: url(Imagen1.jpg); 
-  background-size: cover;
-  background-position: center;
-  position: relative;
-}
-.navbar {
+.header {
+  width: 90%;
+  margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 20px 40px;
-  color: white;
-  font-family: sans-serif;
-  font-weight: bold;
-  text-transform: uppercase;
 }
 
-.nav-links {
-  display: flex;
-  gap: 100px;
-  list-style: none;
+.header h1{
+  font-size: 60px;
+  font-weight: bold;
+}
+
+.header a {
+  margin-left: 40px;
+  color: white;
+  text-decoration: none;
+  font-size: 30px;
+  font-weight: 500;
+  transition: color 0.3s;
+}
+
+.header a:hover {
+  color: #ffcc00;
 }
 
 .login {
   border: 1px solid white;
-  padding: 5px 15px;
-}
-.login:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-.icon {
-  font-size: 34px; 
-  cursor: pointer;
-}
-.hero-content {
-  position: absolute;
-  bottom: 50px;
-  left: 50px;
-  color: white;
+  padding: 10px 15px;
 }
 
-.explore-button {
-  font-size: 30px;
-  display: inline-block;
-  padding: 10px 20px;
-  border: 1px solid white;
-  color: white;
-  text-decoration: none;
-  margin-bottom: 30px;
-  font-weight: bold;
-}
-
-.explore-button:hover {
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
-.mission-title {
-  font-size: 70px;
+body {
   margin: 0;
+  padding-top: 120px;
+  background-image: url('https://images.unsplash.com/photo-1503264116251-35a269479413');
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  color: white;
 }
